<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_3sdp"
    android:paddingBottom="@dimen/_3sdp"
    android:weightSum="10">

    <ImageView
        android:id="@+id/ic_app"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_weight="2"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_notification" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:maxLines="1"
            android:text="@string/app_lock"
            android:textColor="@color/color_363636"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:maxLines="2"
            android:text="@string/content_lock_notification"
            android:textColor="@color/color_363636"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/detail"
        android:textColor="@color/color_144F98" />
</LinearLayout>