<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_dialog"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/biometric_open_for_my_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/open_using_your_biometric_credential"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_finger"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_35sdp"
            android:tint="@color/color_2C61CC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:srcCompat="@drawable/ic_finger" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_35sdp"
            android:text="@string/touch_the_finger_sensor"
            app:layout_constraintTop_toBottomOf="@+id/ic_finger" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_candle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/state_click_back"
            android:fontFamily="@font/font"
            android:padding="@dimen/_3sdp"
            android:text="Candle"
            android:textColor="@color/color_2C61CC"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_touch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>